Fix gap.

--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,6 @@ h2 {
 .split {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
 }
 
 #profile {
@@ -216,11 +215,13 @@ h2 {
   max-width: 10rem;
 
   margin-inline: auto;
+  margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 50em) {
   .split {
     flex-direction: row;
+    row-gap: 4rem;
   }
 
   #profile {
